<resources>
    <string name="app_name">AgentLearningAPP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earNews">耳邊消息</string>
    <string name="login">登入</string>
    <string name="password">密碼</string>
    <string name="account">帳號</string>
    <string name="forgotPassword">忘記密碼</string>
    <string name="createAccount">註冊帳號</string>
    <string name="verticalBar">|</string>
    <string name="accountOrPasswordNotCorrect">帳號或密碼錯誤</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="gender">性別:</string>
    <string name="liveCity">居住城市:</string>
    <string name="confirm">確認</string>
    <string name="signUp">註冊</string>
    <string name="age">年齡</string>
    <string name="name">姓名</string>
    <string name="accountNotFound">沒有此帳號，請重新輸入!</string>
    <string name="passwordNotCorrect">輸入的密碼不正確，請重新輸入!</string>
    <string name="accountDuplicatedWarning">此帳號已有人使用，請重新輸入</string>
    <string name="pleaseEnterCorrectParameter">請輸入正確的資料</string>
    <string name="okay">了解</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="activityParticipated">已參加活動</string>
    <string name="latestNews">最新消息</string>
    <string name="recommendedNews">推薦消息</string>
    <string name="openDrawer">開啟</string>
    <string name="closeDrawer">關閉</string>
    <string name="about">關於</string>
    <string name="logout">登出</string>
    <string name="joined">已參加</string>
    <string name="notJoined">未參加</string>
    <string name="sureAboutCancelThisActivityAction">確定要取消參加此活動?</string>
    <string name="sureAboutJoinThisActivityAction">確定要參加此活動?</string>


    <string-array name="activityOptions">
        <item>最新消息</item>
        <item>已參加活動</item>
        <item>推薦消息</item>
    </string-array>

</resources>
