<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#daffab87"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUpAccountEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/account"
                android:maxLength="20"
                android:maxLines="1"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUpPasswordEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ageEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/boy" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/girl" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liveCity"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/newTaipeiRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/newTaipeiCity" />

            <RadioButton
                android:id="@+id/taoYuanRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/taoYuanCity" />

            <RadioButton
                android:id="@+id/othersRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/others" />
        </RadioGroup>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:text="@string/signUp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>